Application plugin works with gradle, decided not to use modules